--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <div class="loader-bg">
-            <img class="bitcoin" src="./img/bitcon.gif" alt="">
+            <img class="bitcoin" src="/img/bitcon.gif" alt="">
     </div>
     <div class="body">
         <div class="login-body">
